--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,7 @@
         "editor.trimAutoWhitespace": false,
         "files.trimTrailingWhitespace": false
     },
+
     "python.formatting.provider": "yapf",
-    "[json]": {
-	    "editor.formatOnSave": false
-    }
+    "python.pythonPath": "/usr/local/bin/python3"
 }
